[tool.poetry]
name = "jetflow"
version = "0.1.0"
description = "A framework for building real-time data pipeline."
authors = ["soasme <soasme@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.6"
starlette = "^0.14.2"
uvicorn = "^0.13.4"
APScheduler = "^3.7.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
jetflow = 'jetflow.cli:entry'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
