[metadata]
name = runflow
version = 0.5.0
author = Ju Lin
author_email = soasme@gmail.com
description = Define and run your workflows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/soasme/runflow
project_urls =
    Bug Tracker = https://github.com/soasme/runflow/issues
classifiers =
    Topic :: Utilities
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    networkx >= 2.0
    httpx >= 0.18.0
    python-decouple >= 3.0
    lark >= 0.10.1
    python-dateutil >= 2.8.1
    SQLAlchemy >= 1.4.0

[options.extras_require]
docker =
    docker>=5.0.0

[options.package_data]
* =
    *.lark

[options.packages.find]
where = .
include =
    runflow
    runflow.*
    runflow.*.*

[options.entry_points]
console_scripts =
    runflow = runflow.cli:cli
