[metadata]
name = runflow
version = 0.8.1
author = Ju Lin
author_email = soasme@gmail.com
description = Define and run your workflows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/soasme/runflow
project_urls =
    Bug Tracker = https://github.com/soasme/runflow/issues
classifiers =
    Topic :: Utilities
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
install_requires =
    networkx >= 2.0
    httpx >= 0.18.0
    python-decouple >= 3.0
    lark >= 0.10.1
    python-dateutil >= 2.8.1
    SQLAlchemy >= 1.4.0
    fsspec >= 2021.4.0
    tenacity >= 7.0.0

[options.extras_require]
pygraphviz =
    pygraphviz >= 1.5

slack =
    slack-sdk >= 3.5.0
    aiohttp >= 3.7.0

docker =
    docker>=5.0.0

pushbullet =
    pushbullet.py >= 0.12.0

[options.package_data]
* =
    *.lark

[options.packages.find]
where = .
include =
    runflow
    runflow.*
    runflow.*.*

[options.entry_points]
console_scripts =
    runflow = runflow.cli:cli

[flake8]
exclude = runflow/hcl2_parser.py

[coverage:run]
omit = runflow/hcl2_parser.py
